# mathocr

./: .gitignore  AGENTS.md  README.md  app.py  batch_manager.py  event_bus.py  exporter.py  image_annotator.py  job_queue.py  latex_utils.py  ocr_engine.py  pdf_renderer.py  pyproject.toml  server.py  setup.sh  start.sh
.qoder/plans/: OCR_Platform_V2_Enhancement_7d7387e3.md  PaddleOCR_UI_Upgrade_7d7387e3.md  Queue_Panel_Interactions_7d7387e3.md  paddleocr-vl-gradio-app_52ec2cc3.md
static/: index.html  package-lock.json  package.json
static/css/: style.css
static/js/: app.js  sidebar.js  upload.js  viewer.js
static/src/: vendor.js
testset/: Weixin Image_20260718224411_18_1.md  pdf_test.json  pdf_test.md
